change the initialization of DB to happen in the background

--- a/project/src/main/resources/templates/OneDayTemperatureGraph.html
+++ b/project/src/main/resources/templates/OneDayTemperatureGraph.html
@@ -9,6 +9,8 @@
     var month = [[${month}]];
     var year = [[${year}]];
     var day = [[${day}]];
+    
+    // data used for the graph!!!
     var data = [[${data}]];
 
 /*]]>*/
