--- a/project/src/main/resources/templates/OneDayTemperatureGraph.html
+++ b/project/src/main/resources/templates/OneDayTemperatureGraph.html
@@ -26,10 +26,10 @@
         var chartData = google.visualization.arrayToDataTable(eval(data));
 
         var options = {
-          title: '+++ add title here +++',
+          title: 'Temperatures per specific date',
           //curveType: 'function',
-		  hAxis:{title:'!!! add title here !!!'},
-		  vAxis:{title:'??? add title here ???'},
+		  hAxis:{title:'Time'},
+		  vAxis:{title:'Temperature'},
           legend: { position: 'bottom' }
         };
 
